Mejoras en el ordenamiento de listas

--- a/.settings
+++ b/.settings
@@ -7,6 +7,9 @@ Count=0
 [DebugWindow/FMain.conProgram]
 Geometry=[15,267,224,280]
 
+[DebugWindow/FMain.stxTablesFields]
+Geometry=[1646,235,224,843]
+
 [DebugWindow/MData.DBSqlite(stxProgram)]
 Geometry=[352,25,703,318]
 
@@ -14,6 +17,9 @@ Geometry=[352,25,703,318]
 Geometry=[1061,593,224,280]
 
 [DebugWindow/Split(strSentence, "\n")]
+Geometry=[0,25,224,280]
+
+[DebugWindow/cmo]
 Geometry=[0,25,224,280]
 
 [DebugWindow/cntInfo]
@@ -28,14 +34,59 @@ Geometry=[13,164,224,280]
 [DebugWindow/conCreate]
 Geometry=[266,151,224,280]
 
+[DebugWindow/conData]
+Geometry=[1474,485,407,470]
+
 [DebugWindow/conProgram]
 Geometry=[601,63,454,507]
+
+[DebugWindow/conProgram.Tables]
+Geometry=[444,144,224,280]
+
+[DebugWindow/connDB]
+Geometry=[1262,582,224,280]
+
+[DebugWindow/grwData.Rows[intR]]
+Geometry=[36,25,224,280]
+
+[DebugWindow/resCheckRef]
+Geometry=[613,59,224,280]
+
+[DebugWindow/resCombo]
+Geometry=[1586,110,224,280]
+
+[DebugWindow/resEdit]
+Geometry=[526,25,224,280]
+
+[DebugWindow/resIns]
+Geometry=[17,567,224,280]
+
+[DebugWindow/stxEdit]
+Geometry=[692,188,601,867]
 
 [DebugWindow/stxFieldInfo]
 Geometry=[1461,417,266,550]
 
+[DebugWindow/stxFieldTmp]
+Geometry=[0,25,224,280]
+
+[DebugWindow/stxFields]
+Geometry=[-77,441,224,280]
+
+[DebugWindow/stxInsert]
+Geometry=[0,643,224,280]
+
 [DebugWindow/stxKeySQLite]
 Geometry=[229,41,224,280]
+
+[DebugWindow/stxOrder]
+Geometry=[1044,433,224,280]
+
+[DebugWindow/stxOrderColumn]
+Geometry=[1091,51,224,280]
+
+[DebugWindow/stxOrderType]
+Geometry=[1459,84,224,280]
 
 [DebugWindow/stxPackages]
 Geometry=[0,25,224,280]
@@ -58,17 +109,27 @@ Geometry=[856,25,914,384]
 [DebugWindow/stxTables]
 Geometry=[85,91,224,280]
 
+[DebugWindow/stxTitles]
+Geometry=[36,45,245,308]
+
+[DebugWindow/stxVKey]
+Geometry=[1238,756,224,280]
+
+[DebugWindow/stxValues]
+Geometry=[1001,220,224,280]
+
 [DebugWindow/stxWordsSQLite]
 Geometry=[1123,25,224,280]
 
+[DebugWindow/tbl]
+Geometry=[679,72,224,280]
+
 [OpenFile]
-Count=5
+Count=3
 File[1]=".src/FMain.form"
 Active=2
-File[2]=".src/FMain.class:0.34"
-File[3]=".src/gef/MData.module:0.482"
-File[4]=".src/FData.form"
-File[5]=".src/FData.class:19.78"
+File[2]=".src/FMain.class:0.641"
+File[3]=".src/gef/MData.module:24.650"
 
 [Watches]
 Count=0
