--- a/.project
+++ b/.project
@@ -1,9 +1,9 @@
 # Gambas Project File 3.0
-# Compiled with Gambas 3.9.1
-Title=Contacts managment
-Startup=FMain
-Icon=mail.png
-Version=0.0.1
+# Compiled with Gambas 3.9.2
+Title=Lista de contactos
+Startup=MStarter
+Icon=logo.png
+Version=0.0.30
 Component=gb.image
 Component=gb.gui.qt
 Component=gb.form
@@ -11,8 +11,23 @@ Component=gb.db
 Component=gb.desktop.x11
 Component=gb.desktop
 Component=gb.settings
+Component=gb.pcre
 Component=gb.xml
+Description="Gestion de contactos"
+Authors="Martín Belmonte"
 TabSize=2
 Translate=1
-Language=en_US
+Language=es
+Maintainer=Martín Belmonte
+Vendor=Belmotek
+VendorPrefix=btk
+Address=planeta4@openmailbox.org
+Url=www.endoftheinternet.com
+License=General Public License
+PackageName=tocontac-0.0.30
+CreateEachDirectory=1
 Packager=1
+Systems=ubuntu
+Menus=ubuntu:"Applications/Office"
+Categories=ubuntu:"Office"
+Groups=ubuntu:"database"
